objects/BMCServiceDesk__ContentImport__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__ContentVersion__c</fullName>
        <description>Version of content that is imported</description>
        <label>Content Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DeploymentDate__c</fullName>
        <description>Date and time when imported records were deployed</description>
        <label>Deployment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKInitiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who is importing data</description>
        <label>Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ContentImport</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FileName__c</fullName>
        <description>Name of the static resource that stores the imported data</description>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ImportDate__c</fullName>
        <description>Date and time when import was completed</description>
        <label>Import Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RemedyforceVersion__c</fullName>
        <description>Lowest BMC Remedyforce version that is required to import the content</description>
        <label>Remedyforce Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ScanDate__c</fullName>
        <description>Date and time when scan was completed</description>
        <label>Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Status__c</fullName>
        <description>The following values are available:
            Initiated
            Scan Failed
            Scan Completed
            Import successful
            Import failed
            Deployed</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scan Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scan Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import Successful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Summary__c</fullName>
        <description>Summary of status change of each record</description>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>